# knowlege-graph-with-lightrag

./: .gitignore  README.md  graph.py  pyproject.toml
dataset/: reports_last_5_yrs.csv
